--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -550,11 +550,11 @@
 			<h2><strong>Create Race</strong></h2>
 			<nav class="progress-bar-nav">
 				<ul>
-					<li is="router-link" to="/" tag="li" exact><a>Your Event</a></li>
-					<li is="router-link" to="/splits" tag="li"><a>Splits</a></li>
-					<li is="router-link" to="/participants" tag="li"><a>Participants</a></li>
-					<li is="router-link" to="/confirmation" tag="li"><a>Confirmation</a></li>
-					<li is="router-link" to="/published" tag="li"><a>Published</a></li>
+					<li is="router-link" to="/" tag="li" exact><a><span>Your Event</span></a></li>
+					<li is="router-link" to="/splits" tag="li"><a><span>Splits</span></a></li>
+					<li is="router-link" to="/participants" tag="li"><a><span>Participants</span></a></li>
+					<li is="router-link" to="/confirmation" tag="li"><a><span>Confirmation</span></a></li>
+					<li is="router-link" to="/published" tag="li"><a><span>Published</span></a></li>
 				</ul>
 			</nav>
 		</div>
