Fixed form-control in splits modal.

--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -209,8 +209,8 @@
 								</div>
 								<div class="form-group col-xs-6">
 									<label class="required">Time Recording</label>
-									<label class="radio"><input type="radio" class="form-control" name="split-time" value="in" v-model="model.times">Time In</label>
-									<label class="radio"><input type="radio" class="form-control" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
+									<label class="radio"><input type="radio" name="split-time" value="in" v-model="model.times">Time In</label>
+									<label class="radio"><input type="radio" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
 								</div>
 								<div class="form-group col-xs-6">
 									<label class="required">Vertical Gain From Start</label>
