Fixed continue buttons, added more routing logic and endpoints

--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -182,7 +182,7 @@
 					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-split-modal" v-on:click="modalData = blank()">Add New Split&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
 					<button type="button" class="btn btn-default">Import GPX File</button>
 				</p>
-				<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+				<router-link to="/participants" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 			</div>
 		</div>
 	</article>
@@ -367,7 +367,7 @@
 					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="modalData = blank()">Add New Participant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
 					<button type="button" class="btn btn-default">Import CSV</button>
 				</p>
-				<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+				<router-link to="/confirmation" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 			</div>
 		</div>
 	</article>
@@ -551,7 +551,7 @@
 			</tbody>
 		</table>
 		<div class="row">
-			<router-link to="/splits" class="btn btn-primary pull-right">Publish&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			<router-link to="/published" class="btn btn-primary pull-right">Publish&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 		</div>
 	</article>
 </div></script>
