--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -11,10 +11,11 @@ $white: #FFF;
 $red: pink;
 $blue: #2A9FD8;
 
-$break-small: 480px;
-$break-medium: 768px;
-$break-large: 960px;
-$break-xl: 1800px;
+// Boostrap breakpoints
+$break-small: 768px;
+$break-medium: 992px;
+$break-large: 1200px;
+
 $max-width: 1200px;
 
 
