--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -129,14 +129,14 @@
 	</aside>
 	<article class="col-xs-12 col-sm-8">
 		<div class="row">
-			<div class="col-xs-7">
+			<div class="col-xs-12 col-sm-7">
 				<h5>
 					<strong>Your Splits:</strong>
 					<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 				</h5>
 			</div>
-			<div class="col-xs-5">
-				<div class="input-group">
+			<div class="col-xs-12 col-sm-5">
+				<div class="input-group filter-input-group">
 					<input type="text" class="form-control" v-model="filter" placeholder="Filter:"/>
 					<span class="input-group-btn"><span class="btn btn-success"><i class="glyphicon glyphicon-search"></i>Find Split</span></span>
 				</div>
@@ -193,31 +193,55 @@
 					<div class="modal-body">
 
 						<div class="row">
-							<div class="col-xs-6">
+							<div class="col-xs-12 col-md-6 col-md-push-6">
+								<google-map :location="model"></google-map>
+							</div>
 
+							<div class="col-xs-12 col-md-6 col-md-pull-6">
+								
 								<div class="form-group col-xs-6">
 									<label class="required">Split Name</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.name">
 								</div>
 								<div class="form-group col-xs-6">
 									<label class="required">Description</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.description">
 								</div>
 								<div class="form-group col-xs-6">
 									<label class="required">Distance From Start</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.distance" v-mask="{ alias: 'decimal' }">
 								</div>
 								<div class="form-group col-xs-6">
 									<label class="required">Time Recording</label>
-									<label class="radio"><input type="radio" name="split-time" value="in" v-model="model.times">Time In</label>
-									<label class="radio"><input type="radio" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
+									<div class="split-time-recording-wrap">
+										<label class="radio"><input type="radio" name="split-time" value="in" v-model="model.times">Time In</label>
+										<label class="radio"><input type="radio" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
+									</div>
 								</div>
-								<div class="form-group col-xs-6">
+								<div class="form-group col-xs-6 vg-group">
 									<label class="required">Vertical Gain From Start</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.verticalGain" v-mask="{ alias: 'decimal' }">
 								</div>
-								<div class="form-group col-xs-6">
+								<div class="form-group col-xs-6 vg-group">
 									<label class="required">Vertical Loss From Start</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.verticalLoss" v-mask="{ alias: 'decimal' }">
 								</div>
 								<div class="col-xs-12">
@@ -225,6 +249,9 @@
 								</div>
 								<div class="form-group col-xs-12">
 									<label>Name of Location</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<div class="row">
 										<div class="col-xs-6">
 											<input type="text" class="form-control" v-model="model.locationName">
@@ -239,27 +266,34 @@
 								</div>
 								<div class="form-group col-xs-4">
 									<label>Latitude</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.lat" v-mask="{ alias: 'decimal' }">
 								</div>
 								<div class="form-group col-xs-4">
 									<label>Longitude</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.lng" v-mask="{ alias: 'decimal' }">
 								</div>
 								<div class="form-group col-xs-4">
 									<label>Elevation</label>
+									<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
+										<i class="glyphicon glyphicon-question-sign"></i>
+									</span>
 									<input type="text" class="form-control" v-model="model.elevation" v-mask="{ alias: 'integer' }">
 								</div>
-								<div class="col-xs-12">
-									<span class="brackets" data-dismiss="modal"><a>Cancel</a></span>
+								<div class="col-xs-12 split-modal-btn-wrap">
+									<span class="brackets" data-dismiss="modal"><a href="#">Cancel</a></span>
 									<button type="button" class="btn btn-primary" data-dismiss="modal" v-bind:disabled="valid" v-on:click="$emit('done')">
 										<template v-if="!model._dtid">Add Split</template>
 										<template v-else>Done</template>
 									</button>
 								</div>
 							</div>
-							<div class="col-xs-6">
-								<google-map :location="model"></google-map>
-							</div>
+							
 						</div>
 
 					</div>
