finished with the splits modal

--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -48,15 +48,15 @@
 		}
 	}
 	
-	.split-time-recording-wrap {
-		.radio {
-			padding-left: 20px;
-		}
-		input {
-			margin-left: 0;
-			left: 0;
-		}
-	}
+	// .split-time-recording-wrap {
+	// 	// .radio {
+	// 	// 	padding-left: 20px;
+	// 	// }
+	// 	input {
+	// 		margin-left: 0;
+	// 		left: 0;
+	// 	}
+	// }
 
 	.vg-group {
 		position: relative;
