--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -226,8 +226,8 @@
 										<i class="glyphicon glyphicon-question-sign"></i>
 									</span>
 									<div class="split-time-recording-wrap">
-										<label class="radio"><input type="radio" name="split-time" value="in" v-model="model.times">Time In</label>
-										<label class="radio"><input type="radio" name="split-time" value="inandout" v-model="model.times">Time In and Out</label>
+										<input type="radio" name="split-time" value="in" v-model="model.times" id="split-time-in" class="custom-radio"><label for="split-time-in">Time In</label>
+										<input type="radio" name="split-time" value="inandout" v-model="model.times" id="split-time-inout" class="custom-radio"><label for="split-time-inout">Time In and Out</label>
 									</div>
 								</div>
 								<div class="form-group col-xs-6 vg-group">
