--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -124,6 +124,15 @@ label.switchery-label {
 	}
 }
 
+/**********
+Modal Styles
+***********/
+@media ( min-width: $break-medium ) {
+	.modal-lg {
+		max-width: $max-width;
+		width: 90%;
+	} 	
+}
 
 /***********
 Help Tooltip Icon
@@ -403,8 +412,36 @@ span.brackets {
 	}
 }
 
-.radio {
-	input {
-		background: transparent;
+/** Radio Buttons */
+.custom-radio {
+	display: none;
+	
+	& + label {
+		position: relative;
+		padding-left: 25px;
+		cursor: pointer;
+	}
+
+	& + label:before {
+		content: '';
+		width: 20px;
+		height: 20px;
+		position: absolute;
+		left: 0;
+		top: 0;
+		border-radius: 50%;
+		border: 1px solid #D6D6D6;	
+	}
+
+	&:checked + label:after {
+		content: '';
+		width: 12px;
+		height: 12px;
+		position: absolute;
+		left: 10px;
+		top: 10px;
+		margin: -6px 0 0 -6px;
+		border-radius: 50%;
+		background-color: #2BADD6;		
 	}
 }
