--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -180,7 +180,9 @@
 			<div class="col-xs-12">
 				<p class="pull-left">
 					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-split-modal" v-on:click="modalData = blank()">Add New Split&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
-					<button type="button" class="btn btn-default">Import GPX File</button>
+					<ajax-import url="import-gpx" v-on:import="">
+						<span>Import GPX File</span>
+					</ajax-import>
 				</p>
 				<router-link to="/participants" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 			</div>
@@ -365,7 +367,9 @@
 			<div class="col-xs-12">
 				<p class="pull-left">
 					<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="modalData = blank()">Add New Participant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
-					<button type="button" class="btn btn-default">Import CSV</button>
+					<ajax-import url="import-csv" v-on:import="">
+						<span>Import CSV</span>
+					</ajax-import>
 				</p>
 				<router-link to="/confirmation" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 			</div>
@@ -565,6 +569,8 @@
 <!-- Vue.js Applet -->
 
 <div id="event-app">
+	<script id="event-app-data" type="text/json"></script>
+
 	<div class="container-fluid header">
 		<div class="container">
 			<h2><strong>Create Race</strong></h2>
