--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -264,13 +264,13 @@
 										</span>
 										<div class="row">
 											<div class="col-xs-6">
-												<input type="text" class="form-control" v-model="model.locationName">
+												<input type="text" class="form-control" v-model="model.locationName" v-on:input="model.locationId = ''">
 											</div>
-											<span class="or">or</span>
 											<div class="col-xs-6 form-control-fill">
-												
-												<ajax-select class="form-control" v-model="model.locationId" url="get-locations">
+												<span>or</span>
+												<ajax-select class="form-control" v-model="model.locationId" url="get-locations" v-on:input="model.locationName = ''">
 													<option value="" selected disabled>Select One</option>
+													<option value="24">Location A</option>
 												</ajax-select>
 											</div>
 										</div>
@@ -282,21 +282,21 @@
 										<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
 											<i class="glyphicon glyphicon-question-sign"></i>
 										</span>
-										<input type="text" class="form-control" v-model="model.lat" v-mask="{ alias: 'decimal' }">
+										<input type="text" class="form-control" v-model="model.lat" v-mask="{ alias: 'decimal' }" :disabled="model.locationId!=''">
 									</div>
 									<div class="form-group col-xs-4">
 										<label>Longitude</label>
 										<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
 											<i class="glyphicon glyphicon-question-sign"></i>
 										</span>
-										<input type="text" class="form-control" v-model="model.lng" v-mask="{ alias: 'decimal' }">
+										<input type="text" class="form-control" v-model="model.lng" v-mask="{ alias: 'decimal' }" :disabled="model.locationId!=''">
 									</div>
 									<div class="form-group col-xs-4">
 										<label>Elevation</label>
 										<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. ">
 											<i class="glyphicon glyphicon-question-sign"></i>
 										</span>
-										<input type="text" class="form-control" v-model="model.elevation" v-mask="{ alias: 'integer' }">
+										<input type="text" class="form-control" v-model="model.elevation" v-mask="{ alias: 'integer' }" :disabled="model.locationId!=''">
 									</div>
 								</div>
 								<div class="col-xs-12 split-modal-btn-wrap">
