fixed the split modal width bug

--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -126,8 +126,8 @@ label.required:after {
 /**********
 Modal Styles
 ***********/
-@media ( min-width: $break-medium ) {
-	.modal-lg {
+@media ( min-width: $break-small ) {
+	.modal-dialog.modal-lg {
 		max-width: $max-width;
 		width: 90%;
 	}
