working on event-info styles. stopped at the caret

--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -57,6 +57,32 @@
 			margin-left: 20px;
 		}
 	}
+	
+	.well {
+		border: none;
+		border-radius: 0;
+	}
+
+	.well:after {
+					
+	}
+
+	// Event Info Page Styles
+	.event-info-course-row {
+
+		.btn-success {
+			float: right;
+			width: 100%;
+		}
+
+		.event-info-or {
+			display: block;
+			margin: 10px 0;
+			@include breakpoint( $break-small ) {
+				margin: 5px 0 0 0;
+			}
+		}
+	}
 }
 
 /* There has to be a better way */
